@@ -3,6 +3,11 @@ Change log
 
 1.5 (unreleased)
 ----------------
+- Feature: If you generate some documentation via 
+  `z3c.recipe.sphinxdoc` and want to stitch links to it 
+  into the generated index file, you can use the new 
+  ``z3csphinx-output-directory`` parameter to point the script 
+  to the generated package documentation root folder.
 
 
 1.4 (2010-07-31)
